feat: json 객체로 관리